ドキュメントの更新
Former-commit-id: 04fdb3c5451adfe38be5df8c43b18ec0c4ad4054

--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -81,7 +81,7 @@
 			</dt><br>
 			<dd>
 			<p>
-			iOS/android/html5(WebGL)上での実行をサポートする<a href="hsp3dish_prog.htm">HSP3Dish</a>の各種機能を拡充しています。<br>
+			Windows/iOS/android/Linux/html5(WebGL)上での実行をサポートする<a href="hsp3dish_prog.htm">HSP3Dish</a>の各種機能を拡充しています。<br>
 			文字列の描画を大きく見直し、すべてのプラットフォームで日本語を含む文字列の表示、半透明合成に対応しています。
 			また、新しい配置オブジェクトとしてチェックボックス、入力ボックスをサポートしています。
 			Windows/Linuxプラットフォームでは、screen、bgscr命令によるウインドウサイズの変更、フルスクリーン表示に対応しています。
@@ -111,7 +111,7 @@
 			自由に使える素材として、HSPTVフォルダに多くの素材が拡充されています。
 			HSP3オフィシャルキャラクター "珠音（たまね）"を始めとして、プロ生ちゃんコラボ素材など
 			ゲームを中心に幅広く活用することができます。
-			新たなサンプルスクリプトも同梱し、オリジナルの作品作りに活用頂けます。
+			新たなサンプルスクリプトも同梱し、オリジナルの作品作りのため、自由に活用することができます。
 			</p>
 			</dd>
 
