--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -41,11 +41,12 @@
 	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
 			<ul>
 				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
+				<li><a href="doclib/sprite.html">標準スプライトプログラミングガイド（sprite.html）</a></li>
 				<li><a href="doclib/hgimg4.html">HGIMG4プログラミングガイド（hgimg4.html）</a></li>
 				<ul>
 					<li><a href="doclib/hgimg4_unity.html">HGIMG4 Unity連携ガイド（hgimg4_unity.html）</a></li>
 				</ul>
-				<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScript版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
+				<li><a href="doclib/hsp3dish_js.htm">WebGL/html5版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
 				<li><a href="doclib/hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
 				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
 				<li><a href="doclib/hsp3cnv.txt">HSP3ソースコンバーター・マニュアル（hsp3cnv.txt）</a></li>
