--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -9,14 +9,14 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,HSP3Dish,WebGL,JavaScript,hsp3dish.js">
 	<meta name="description" content="HSP3Dish hsp3dish.js版に関する情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3Dish WebGL/JavaScript版(hsp3dish.js)プログラミングガイド</title>
+	<title>HSP3Dish WebGL/html5版(hsp3dish.js)プログラミングガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2019(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2020(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
-	<h1>hsp3dish.js (WebGL/JavaScript版)<br><br>プログラミングガイド</h1>
+	<h1>hsp3dish.js (WebGL/html5版)<br><br>プログラミングガイド</h1>
 
 	<!-- 目次 -->
 	<ol>
@@ -57,14 +57,14 @@
 
 	<h2 id="LOGIC">hsp3dish.jsの仕組み</h2>
 	<p>
-	hsp3dish.jsは、	<a href="http://llvm.org/" target="_blank">llvmコンパイラ</a>、及び<a href="https://github.com/kripken/emscripten" target="_blank">EMscripten</a>を使用して、
-	HSP3ランタイムをJavaScript向けに変換したものです。
+	hsp3dish.jsは、	<a href="http://llvm.org/" target="_blank">llvmコンパイラ</a>、及び<a href="https://github.com/kripken/emscripten" target="_blank">Emscripten</a>を使用して、
+	HSP3ランタイムをJavaScript及びWebAssembly向けに変換したものです。
 	HSP3のオリジナルソースを元にしているため、動作の互換性が高く、アップデートも容易なシステムになっています。
 	<br>
 	iOS版、android版のHSP3Dishは、HSPのスクリプトをネイティブコードに変換した上で実行していますが、
-	hsp3dish.jsは、HSPのスクリプトを中間コードに出力したもの(.axオブジェクトファイル)をもとにして、インタプリタ(逐次実行)として動作します。これは、Windows版のHSP3Dishと同様です。
+	hsp3dish.jsは、HSPのスクリプトを中間コードに出力したもの(.axオブジェクトファイル)をもとにして、インタプリタ(逐次実行)として動作します。これは、Windows版のHSP3Dishと同一のプログラムとなっており、極めて高い互換性を持っています。
 	<br>
-	スクリプトの実行速度は、ブラウザを実行しているマシンのCPU速度、VMの速度に依存しますが、最近のPCであれば実用的な範囲で動作するはずです。
+	スクリプトの実行速度は、ブラウザを実行しているマシンのCPU速度、VMの速度に依存しますが、最近のPCであれば実用的な範囲で動作します。
 	</p>
 
 	<h2 id="CONVERT">HSP3Dish Helperによる変換</h2>
@@ -95,14 +95,25 @@
 	</p>
 	<li>メモリサイズ</li><br><p>
 	ブラウザ実行時に確保されるメモリブロックの上限値を設定することができます。
-	空欄の場合は、デフォルトの値(16メガバイト)が使用されます。
-	通常は、デフォルト値で問題ありませんが、規模の大きいスクリプトや膨大なデータを使用する場合は、16よりも大きい値を指定してください。(32を指定した場合は、32メガバイトとなります。)<br>
-	ブラウザ実行時に、hsp3dish.jsコンソールに「Cannot enlarge memory arrays.」という表示が出る場合は、メモリブロックの上限値を調整してみてください。
+	空欄の場合は、デフォルトの値(200メガバイト)が使用されます。
+	通常は、デフォルト値で問題ありませんが、規模の大きいスクリプトや膨大なデータを使用する場合は、100よりも大きい値を指定してください。(32を指定した場合は、32メガバイトとなります。)<br>
+	(ブラウザ実行時に、hsp3dish.jsコンソールに「Cannot enlarge memory arrays.」という表示が出る場合は、メモリブロックの上限値を調整してみてください。)
 	</p>
 	<li>HGIMG4を使用する</li><br><p>
 	HGIMG4のスクリプトを変換します。実行時には「hsp3dish-gp.js」が必要になります。<br>
 	HGIMG4が使用するデータは、「ソーススクリプト」で指定したフォルダ以下の「res」「res/shaders」に配置しておいてください。(sample/hgimg4内にあります)
 	<br><b>※現在のバージョンでは、ポストエフェクトなどで使用するオフスクリーン描画命令を使用することができませんので、注意してください。</b>
+	</p>
+	<li>WebAssemblyを使用する</li><br><p>
+	WebAssembly形式に変換します。実行時には「.wasm」ファイルが追加で必要になります。<br>
+	WebAssembly形式にすることで、読み込みや実行速度の高速化などが期待できます。
+	ただし、Webブラウザのサポートが限られているため、現在はまだ実験的な実装になっています。
+	</p>
+	<li>デバッグ情報を出力する</li><br><p>
+	スクリプトを変換する際にデバッグ情報を含めたデータを生成します。<br>
+	デバッグ情報を出力することによって、ブラウザ上での実行時にエラーが発生した際に、
+	行番号やソーススクリプトのファイル名を参照することができます。
+	ブラウザ実行時にどこでエラーが発生したかわからない場合は、デバッグ情報を出力して確認してみてください。
 	</p>
 	</ul>
 	<p>
@@ -113,6 +124,7 @@
 	<li>(ソーススクリプト名).html ファイル</li>
 	<li>(ソーススクリプト名).data ファイル</li>
 	<li>hsp3dish.js ファイル (HGIMG4使用時は、hsp3dish-gp.js)</li>
+	<li>hsp3dish.wasm ファイル (HGIMG4使用時は、hsp3dish-gp.wasm)</li>
 	</ul>
 	<p>
 	元のソーススクリプトがあるフォルダに、これらのファイルが生成されているはずです。
@@ -124,7 +136,9 @@
 	.dataファイルは、HTMLファイル内のJavaScriptから読み込まれるデータファイルで、実行に必要なデータがすべて含まれています。
 	<br>
 	「hsp3dish.js」「hsp3dish-gp.js」ファイルは、HSPランタイムの核となる部分で、WEB上でHSP3Dishを実行させる場合に必ず必要となります。
-	これは、すべてのスクリプトで同一となるため、同じフォルダに複数の.htmlと.dataを置いた場合でも、共用することが可能です。
+	これは、すべてのスクリプトで同一となるため、同じフォルダに複数の.htmlと.dataを置いた場合でも、共用することが可能です。<br>
+	WebAssembly形式に変換した場合は、hsp3dish.wasm ファイル (HGIMG4使用時は、hsp3dish-gp.wasm)が生成されます。(通常時は生成されません)
+	このファイルも、「hsp3dish.js」と同様にサーバーにアップロードしてください。
 	</p>
 
 
@@ -160,7 +174,7 @@
 	        ENV.HSP_SY = "800";
 	        ENV.HSP_AUTOSCALE = "0";//スケーリングモード
 	        ENV.HSP_FPS = "0";//フレームレート
-	        ENV.HSP_LIMIT_STEP = "5000";//ブラウザに処理を返すまでの実行ステップ数
+	        ENV.HSP_LIMIT_STEP = "15000";//ブラウザに処理を返すまでの実行ステップ数
 	    });
 	</pre></ul>
 	<p>
@@ -178,7 +192,7 @@
 	<p>
 	その他のオプションも、以下の通り設定することができます。<br>
 	「HSP_FPS」で固定のフレームレートを指定します。30の場合は30FPS(30/1000秒)で更新を行ないます。0(デフォルト)の場合は、フレーム数をブラウザに任せます(requestAnimationFrame)。<br>
-	「HSP_LIMIT_STEP」は、強制的にブラウザに処理を返すまでの実行ステップ数を指定します。デフォルトで「5000」が指定されています。あまり大きいとスクリプトや処理系に問題が有った時にブラウザが固まってしまうので注意してください。
+	「HSP_LIMIT_STEP」は、強制的にブラウザに処理を返すまでの実行ステップ数を指定します。デフォルトで「15000」が指定されています。あまり大きいとスクリプトや処理系に問題が有った時にブラウザが固まってしまうので注意してください。
 	</p>
 
 
@@ -194,30 +208,10 @@
 		・動画の再生には対応していません
 	</pre></ul>
 	<p>
+	mmload命令で読み込み可能なフォーマットは、「.wav」「.mp3」「.ogg」です。<br>
 	メディアファイルはリソースとして膨大なサイズになる場合があるため、起動時にすべてメモリに読み込む現在のリソース管理では、大量の楽曲を流す処理には向いていません。
-	今後のバージョンでは改良していきたいと考えています。
+	この点は、今後のバージョンでは改良していきたいと考えています。
 	</p>
-	<p>
-	メディア関連の命令がhsp3jsの独自拡張として実装されています。
-	(他のプラットフォームでは動作しないのでご注意ください)
-	</p>
-	<ul><pre>
-		・mmload命令にパラメータを追加しています
-
-		mmload "filename",バッファID,割り当てモード,ープ開始時間,終了時間
-		ループ開始・終了時間は、それぞれ（ミリ秒）を指定することができます。
-		バラメーターが省略された場合は、開始は0から、終了は最後の時間となります。
-
-		・mmplay命令にパラメータを追加しています
-
-		mmplay バッファID,チャンネルID
-		チャンネルIDは、-1を指定した場合に空きチャンネルを自動的に割り当てます。
-		0～31を指定した場合は、特定のチャンネルで再生を行ないます。
-
-		・mmstat命令でチャンネルIDを取得可能です
-
-		モード値に16を指定して、バッファIDをマイナス値にすることで、再生中のチャンネルIDを取得することができます。
-	</pre></ul>
 
 
 	<h2 id="NOTICE">制限事項・既知の問題点</h2>
@@ -229,7 +223,6 @@
 		・メディア関連の機能(ブラウザ、ファイルタイプによる制限あり)
 		・exec,dialog命令(未サポート)
 		・HGIMG4のオフスクリーン描画命令は未サポート
-		・マルチタッチ未サポート
 		・DPMファイルは使用できません
 		・bsave命令などファイルの静的な保存はできません
 	</pre></ul>
@@ -298,7 +291,7 @@
 	POSSIBILITY OF SUCH DAMAGE.
 	</pre></ul>
 	<p>
-	hsp3dish.js/hsp3dish-gp.jsは、<a href="http://peppermint.jp/" target="_blank">zakkiさん</a>によって実装されたEmscripten版HSP3Dishをベースに実装したものです。
+	hsp3dish.js/hsp3dish-gp.jsは、<a href="http://peppermint.jp/" target="_blank">zakkiさん</a>によって実装されたEmscripten版HSP3Dishをベースに作成したものです。
 	マルチメディア機能、描画機能の改善をK-sさんにご協力頂きました。
 	素晴らしいシステムを開発したzakkiさん、ご意見をお寄せいただいた多くの方々に感謝致します。
 	<br>
@@ -311,8 +304,8 @@
 		Emscripten版HSP3Dish WiKi
 		<a href="http://dev.onionsoft.net/trac/openhsp/wiki/DirTrunk/Hsp3dish/Emscripten" target="_blank">http://dev.onionsoft.net/trac/openhsp/wiki/DirTrunk/Hsp3dish/Emscripten</a>
 
-		peppermint
-		<a href="http://peppermint.jp/" target="_blank">http://peppermint.jp/</a>
+		zakki
+		<a href="https://twitter.com/k_matsuzaki" target="_blank">https://twitter.com/k_matsuzaki</a>
 	</pre></ul>
 
 	<!-- フッター -->
