標準スプライト関連ドキュメントの更新
Former-commit-id: 71bc03b89e9f3b05421c1e80722332d4ed066919

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -256,7 +256,9 @@
 	<p>
 	で、スプライトを登録することができます。<br>
 	p1は、スプライトNo.、(p2,p3)は画面上でのスプライトの座標になります。
-	この座標を左上として、p4で指定したキャラクタNo.が表示されます。
+	この座標を左上として、p4で指定したキャラクタNo.が表示されます。<br>
+	p1を省略するか、マイナス値にした場合は、自動的に空いているスプライトNo.を割り当てます。
+	この場合、命令実行後に設定されたスプライトNo.がシステム変数statに代入されます。
 	<br><br>
 	スプライト座標は、-32767～32767までの範囲が設定可能です。
 	通常は画面の左上を(0,0)として画面解像度の範囲に表示されますが、これを
