標準スプライト機能の更新
Former-commit-id: 42c32f0731cbe34aeb33c8fff52dd9c537538710

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -192,7 +192,7 @@
 	<p>
 	その他のオプションも、以下の通り設定することができます。<br>
 	「HSP_FPS」で固定のフレームレートを指定します。30の場合は30FPS(30/1000秒)で更新を行ないます。0(デフォルト)の場合は、フレーム数をブラウザに任せます(requestAnimationFrame)。<br>
-	「HSP_LIMIT_STEP」は、強制的にブラウザに処理を返すまでの実行ステップ数を指定します。デフォルトで「15000」が指定されています。あまり大きいとスクリプトや処理系に問題が有った時にブラウザが固まってしまうので注意してください。
+	「HSP_LIMIT_STEP」は、強制的にブラウザに処理を返すまでの実行ステップ数を指定します。デフォルトで「15000」が指定されています。あまり大きいとスクリプトや処理系に問題が有った時にブラウザの応答がなくなってしまうので注意してください。
 	</p>
 
 
@@ -201,7 +201,8 @@
 	現在のバージョンでは、メディアファイル再生に関して試験的な対応となっています。
 	</p>
 	<ul><pre>
-		・wav,ogg形式の再生に対応しています(mmload,mmplay命令)
+		・wav,mp3形式の再生に対応しています(mmload,mmplay命令)
+		・ogg形式は一部のブラウザのみ対応しています(mmload,mmplay命令)
 		・Chrome及び、Firefox上での動作を確認しています
 		・IE11上では動作しません(エラーにはなりません)
 		・mci命令には対応していません
@@ -246,7 +247,7 @@
 	将来のバージョンでは、より高い互換性と機能の向上を目指していきたいと考えています。
 	</p>
 	<ul><pre>
-		・HSP3Dishがサポートする命令の実装
+		・ネットワーク拡張処理の実装
 		・SoupSeedとの連携機能
 		・WEB上でのコード編集及びコンパイル実行
 	</pre></ul>
