--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -29,7 +29,7 @@
 					<li><a href="#HSP_MECHANISM">HSPのしくみ</a></li>
 					<li><a href="#EX_EXPAND">HSPを機能拡張する<span class="new">（New!）</span></a></li>
 					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール<span class="new">（New!）</span></a></li>
-					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
+					<li><a href="#EX_RUNTIME">拡張ランタイム<span class="new">（New!）</span></a></li>
 					<li><a href="#GAMEDEV">HSPによるゲーム開発<span class="new">（New!）</span></a></li>
 					<li><a href="#ONEKEY_HELP">ワンキーヘルプ</a></li>
 					<li><a href="#MAKE_EXE">実行ファイルの作成方法</a></li>
@@ -380,8 +380,10 @@
 			<dt>コンパクト版HSPランタイム(hsp3c)</dt>
 			<dd>
 				<p>
-					標準のHSP3から、COM関連機能、及びgrect、grotate、gsquare命令及び、PNGファイル読み込み機能が削除されています。
-					これらの機能が必要がない場合に実行ファイルをコンパクトにすることができます。
+					標準のHSP3から、COM関連機能を削除し、ランタイムにかかるファイルサイズを30%以上削減しています。
+					コンパクト版HSPランタイムは、Windowsの互換性を重視して古いコンパイラで作成されており、Windows9xを始めとする幅広いWindows OSをサポートします。
+					過去のOSやスクリプトを使用する場合にご使用ください。
+					最新のOSを使用する場合は、コンパクト版は推奨されません。標準HSP3など他のランタイムの方が効率よく実行されます。
 				</p>
 			</dd>
 			<dt>HSP3UTFランタイム(hsp3utf)</dt>
@@ -415,16 +417,18 @@
 				HSP3標準ランタイムは、基本的なWindows APIのみを利用するため、幅広い機種で互換性が高く、作りやすいメリットがあります。ただし、描画速度が遅く、画面を大量に書き換えるゲームなどには向いていません。<br>
 				sample/gameフォルダ内にサンプルとなるスクリプトを多数収録していますので参考にしてみてください。<br>
 				効果音や音楽の再生には、別途hspogg拡張プラグインを追加することで、細かい制御がサポートされます。
+				また、手軽な2D物理エンジンとしてOBAQ拡張プラグインを追加することもできます。
 				</p>
 			</dd>
 			<dt>高度な2Dゲーム</dt>
 			<dd>
 				<p>
-				HSP3標準ランタイムに比べて高速な画面の書き換えが可能なHSP3Dishランタイムが用意されています。<br>
+				HSP3標準ランタイムに比べて高速な画面の書き換えが可能な<a href="hsp3dish_prog.htm">HSP3Dishランタイム</a>が用意されています。<br>
 				これらのランタイムは、Windows上だけでなくandroid,iOS,linux,html5など幅広い環境で動作させることが可能です。
 				描画にもDirectX、OpenGLといったGPU支援のあるAPIを使用しているため大量の画像を処理しても速度が落ちにくいメリットがあります。<br>
-				ただし、HSP3標準ランタイムと比べてサポートされていない機能(複数のウインドウサポートなど)があり、描画の手順にも若干の違いがあります。<br>
-				sample/hsp3dishフォルダ内にサンプルとなるスクリプトを収録していますので参考にしてみてください。
+				また、<a href="sprite.html">標準スプライト機能</a>を使うことにより手軽に2Dの物体(スプライト)を管理することができ、大幅に工数が削減できます。<br>
+				HSP3Dishランタイムは、HSP3標準ランタイムと比べてサポートされていない機能(複数のウインドウサポートなど)があり、描画の手順にも若干の違いがあります。<br>
+				sample/hsp3dish、sample/spriteフォルダ内にサンプルとなるスクリプトを収録していますので参考にしてみてください。
 				</p>
 			</dd>
 			<dt>3Dゲーム</dt>
@@ -433,7 +437,7 @@
 				3D表示を使ったゲームは、HSP3標準ランタイムのみでは機能が足りない場合が多いです。
 				HSPでは、3D表示用ランタイムとしてHGIMG3,HGIMG4を用意しています。HGIMG3は、古くからサポートされてきたDirectX8を使用するもので、現在は新規の開発を終了しています。
 				現在は、これに替わるHGIMG4の機能を随時拡張しています。OpenGLを使用し、HSP3Dishと同様にandroid,iOS,linux,html5のプラットフォームをサポートしています。<br>
-				3Dの機能が必要な場合は、HGIMG4を使用頂けば、FBX形式の3Dデータ表示、アニメーションの再生、ポストエフェクト、カスタムシェーダーの使用など多くのモダンな機能を利用可能です。
+				3Dの機能が必要な場合は、HGIMG4を使用頂けば、FBX形式の3Dデータ表示、アニメーションの再生、3D物理エンジン、ポストエフェクト、カスタムシェーダーの使用など多くのモダンな機能を利用可能です。
 				ただし、すべてのGPU、グラフィックカードをサポートしているわけではありません。Windows7以前の古い機種で動作させる場合は、起動できなかったり、表示がおかしくなるなどの現象が出る可能性があります。<br>
 				sample/hgimg4、sample/pronama3dフォルダ内にサンプルとなるスクリプトを収録していますので参考にしてみてください。
 				</p>
