--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -29,6 +29,7 @@
 		<li><a href="#ADD_SPRITE">スプライトの登録</a></li>
 		<li><a href="#MOVE_SPRITE">スプライトの移動</a></li>
 		<li><a href="#INFO_SPRITE">スプライトパラメーター</a></li>
+		<li><a href="#PRIORITY_SPRITE">スプライトの表示優先順位</a></li>
 		<li><a href="#MANAGE_SPRITE">スプライト管理命令</a></li>
 		<li><a href="#ANIMATION">アニメーション</a></li>
 		<li><a href="#EFFECT_SPRITE">スプライトの変形と効果</a></li>
@@ -204,12 +205,12 @@
 	これでサイズを設定したら、es_pat命令でキャラクタパターンを登録します。
 	</p>
 	<pre>
-	es_pat p1,p2,p3,p4,p5			キャラクタパターン定義
-		p1=キャラクタNo.
-		p2=キャラクタパターンの左上X座標
-		p3=キャラクタパターンの左上Y座標
-		p4=表示フレーム数(0)
-		p5=ウインドウバッファID</pre>
+		es_pat p1,p2,p3,p4,p5			キャラクタパターン定義
+			p1=キャラクタNo.
+			p2=キャラクタパターンの左上X座標
+			p3=キャラクタパターンの左上Y座標
+			p4=表示フレーム数(0)
+			p5=ウインドウバッファID</pre>
 	<p>
 	p1のキャラクタNo.に、 (p2,p3)の座標を左上として、
 	es_sizeで設定した大きさのキャラクタパターンが登録されます。
@@ -237,6 +238,29 @@
 	<p>
 	上の例では、「testchr.png」という画像ファイルをウインドウバッファID3に読み込み、
 	(0,0)からの64×64ドットの画像をキャラクターNo.0として定義しています。
+	</p>
+	<p>
+	複数のキャラクタパターンをまとめて定義するためのes_patanim命令も用意されています。
+	この命令により、アニメーションを含めた定義が可能です。
+	</p>
+	<pre>
+		es_patanim p1,p2,p3,p4,p5		まとめてキャラクタ画像定義
+			p1(-1)=キャラクタNo.
+			p2=定義する個数
+			p3=キャラクタパターンの左上X座標
+			p4=キャラクタパターンの左上Y座標
+			p5(0)=表示フレーム数(0)
+			p6=ウインドウバッファID</pre>
+	<p>
+	p1で指定したキャラクタNo.以降に、p2で指定した個数だけキャラクタパターンが登録されます。単一のキャラクタNo.を定義する場合は、es_pat命令を使用してください。<br>
+	登録されるキャラクタパターンは、画像の中で連続した横並びの領域が対象となります。(p3,p4)の座標からes_sizeで設定した大きさで右方向にパターンが並んでいるものとしてキャラクタが登録されます。<br>
+	ここで対象となる画像は、picload命令またはcelload命令であらかじめウインドウバッファに読み込んでおく必要があります。<br>
+	p5で、ウインドウバッファIDが指定されていればそのウインドウバッファから、p5が省略されている場合は、現在の操作先にあたるウインドウバッファから、画像の中の一部を切り出してきてキャラクタパターンとして登録します。<br>
+	p1パラメーターを省略するかマイナス値にした場合は、自動的に空いているキャラクタNo.が割り当てられます。この命令を実行後に、システム変数statに割り当てられたキャラクタNo.が代入されるので、それによってどのNo.が使われたかを知ることができます。<br>
+	p5のパラメータは、キャラクタアニメーションをするための設定です。<br>
+	0ならば、アニメーションなし。1以上ならば、指定したフレーム数だけそのキャラクタを表示した後、 次のキャラクタ(キャラクタNo.+1)を表示するように設定されます。<br>
+	通常は、p2パラメーターで指定した個数のパターンをp5の待ちフレームで繰り返すアニメーションが定義されます。<br>
+	p2パラメーターにESSPPAT_1SHOT($1000)を加算した場合、複数のパターンをアニメーション表示後に消滅するパターンを定義します。
 	</p>
 
 
@@ -403,8 +427,36 @@
 	<h2 id="INFO_SPRITE">スプライトパラメーター</h2>
 
 	<p>
-	スプライトに設定された情報を読み出したり、検索することも可能です。以下
-	のような命令が用意されています。
+	1つのスプライトには様々なパラメーターが保存されており、
+	必要に応じて読み出し、書き込みが可能です。<br>
+	スプライトパラメーターを示す以下のマクロが用意されています。
+	</p>
+	<pre>
+	値     マクロ           内容
+	----------------------------------------------------------
+	 0     ESI_FLAG        flag値(機能の状態設定)
+	 1     ESI_POSX        X座標
+	 2     ESI_POSY        Y座標
+	 3     ESI_SPDX        X移動値
+	 4     ESI_SPDY        Y移動値
+	 5     ESI_PRGCOUNT    プログレスカウント値((未使用)
+	 6     ESI_ANIMECOUNT  アニメーションカウンター
+	 7     ESI_CHRNO       キャラクタNo.
+	 8     ESI_TYPE        type値(ユーザー設定による属性)
+	 9     ESI_ACCELX      X加速度(落下用)
+	10     ESI_ACCELY      Y加速度(落下用)
+	11     ESI_BOUNCEPOW   反発力(落下用)
+	12     ESI_BOUNCEFLAG  反発設定(落下用)
+	13     ESI_OPTION      オプション値(ユーザー設定による)
+	14     ESI_PRIORITY    表示優先度
+	15     ESI_ALPHA       特殊効果(EP値)
+	16     ESI_FADEPRM     フェード用パラメーター
+	17     ESI_ZOOMX       X表示倍率
+	18     ESI_ZOOMY       Y表示倍率
+	19     ESI_ROTZ        回転角度</pre>
+	<p>
+	すべての情報は32bitの整数で保存されています。
+	設定された情報を読み出したり、設定するために以下のような命令が用意されています。
 	</p>
 	<pre>
 	es_get p1,p2,p3				スプライト情報取得
@@ -416,6 +468,83 @@
 	す。情報の種類は、p3のinfo numberで指定します。 詳しくは命令リファレン
 	スを参照してください。
 	</p>
+	<pre>
+	es_setp p1,p2,p3			スプライト情報設定
+		p1=スプライトNo.
+		p2=info number
+		p3=変更する値</pre>
+	<p>
+	この命令では、 p1のスプライトNo.の情報を設定することができます。
+	情報の種類は、p2のinfo numberで指定します。<br>
+	ほとんどのパラメーターは設定するための命令が別途用意されているので、
+	es_get、es_setp命令を使用する必要はありません。
+	また、座標や、加速度、倍率などは固定小数値となっているため実際の値と異なります。
+	そのため座標に関する入出力は、es_pos,es_getpos命令が用意されています。
+	</p>
+	<pre>
+	es_pos p1,p2,p3,p4
+		p1=スプライトNo.
+		p2=スプライトX座標
+		p3=スプライトY座標
+		p4(0)=設定オプション</pre>
+	<p>
+	es_pos命令は、p1で指定したスプライトNo.の座標を(p2,p3)の値に設定します。
+	p4のオプションにより設定できる座標を選ぶことができます。
+	</p>
+	<pre>
+	   p4    マクロ名        内容
+	--------------------------------------------------
+	      0  ESSPSET_POS     スプライトX,Y座標
+	      1  ESSPSET_ADDPOS  スプライトX,Y移動成分
+	      2  ESSPSET_FALL    スプライトX,Y落下速度
+	      3  ESSPSET_BOUNCE  スプライトバウンド係数
+	      4  ESSPSET_ZOOM    スプライトX,Y表示倍率
+	 0x1000  ESSPSET_DIRECT  直接32bit値を設定する
+	 0x2000  ESSPSET_MASKBIT 固定小数部分を保持する
+	</pre>
+	<p>
+es_pos命令が設定する座標値は、内部では16bit固定小数になっています。通常は、自動的に変換されますが、設定オプションにESSPSET_DIRECTを付加することで、変換は無効になります。<br>
+また、ESSPSET_MASKBITを付加することで、16bit固定小数の変換時にそれまでの小数部分を保持するようになります。<br>
+	同様に、スプライトの座標を取得するには、es_getpos命令を使用します。
+	</p>
+	<pre>
+	es_getpos p1,p2,p3,p4
+		p1=スプライトNo.
+		p2=X座標が代入される変数名
+		p3=Y座標が代入される変数名
+		p4(0)=設定オプション</pre>
+	<p>
+	これは、スプライト座標などのX,Y情報を取得して2つの変数に代入します。
+	p1でスプライトNo.を指定して、p2,p3パラメーターで代入される変数を設定します。<br>
+	p4の設定オプションはes_pos命令のものと同様です。
+	</p>
+	<p>
+	スプライトのflag値は、スプライトが有効か無効か、基本的な挙動などを決める
+	重要なパラメーターです。この値を設定するためのes_flag命令が用意されています。
+	</p>
+	<pre>
+	es_flag p1,p2
+		p1=スプライトNo.
+		p2=flag値</pre>
+	<p>
+	flag値は、スプライトが有効になっている場合は、 $100(256)が自動的に設定されています。
+	通常は特にいじる必要はありません。
+	flag値が示す値は以下の通りです。[]内は定義されているマクロ名です。
+	</p>
+	<pre>
+	  0    :  スプライト未登録
+	  bit 0-6 : 1～127 カウントダウンタイマー
+	  bit 7   : カウントダウン消失SWITCH
+	  bit 8 :  $100 スプライト表示ON [ESSPFLAG_STATIC]
+	  bit 9 :  $200 スプライト移動ON [ESSPFLAG_MOVE]
+	  bit10 :  $400 自由落下移動ON [ESSPFLAG_GRAVITY]
+	  bit11 :  $800 BGとリンクして移動(未実装) [ESSPFLAG_BGLINK]
+	  bit12 : $1000 ボーダー消去無効ON [ESSPFLAG_NOWIPE]
+	  bit13 : $2000 ボーダーXで反転SWITCH [ESSPFLAG_XBOUNCE]
+	  bit14 : $4000 ボーダーYで反転SWITCH [ESSPFLAG_YBOUNCE]
+	  bit15 : $8000 カウントダウンタイマー時点滅SWITCH [ESSPFLAG_BLINK]
+	  bit16 : $10000 非表示SWITCH [ESSPFLAG_NODISP]
+	</pre>
 
 	<p>
 	スプライトのtype値は、ゲームなどで物体の識別をする時に有効に使うことが
@@ -442,9 +571,54 @@
 	また、自分のミサイルが敵に衝突しているかを判定する場合には、まず
 	es_find命令でtype8のスプライトだけを検索して、 その1つ1つが、敵(type2)
 	と衝突しているかを判定すればいいわけです。
-	<br><br>
-	このようにtype値をあらかじめ割り振っておくことで、スプライトの管理をス
-	マートに行なうことが可能です。
+	</p>
+
+
+	<h2 id="PRIORITY_SPRITE">スプライトの表示優先順位</h2>
+
+	<p>
+	スプライトは通常、スプライトNo.の値が小さいほど手前に表示されます。
+	ただし、スプライトの表示優先順位パラメーターを設定することで、
+	スプライトごとに任意の優先度を適用することができます。<br>
+	スプライト優先順位設定は、es_setpri命令によって行います。
+	</p>
+	<pre>
+		es_setpri p1,p2			スプライト優先順位設定
+			p1(0)=スプライトNo.
+			p2(0)=優先順位(0～)</pre>
+	<p>
+	p1で指定したスプライトに、p2で指定した値を設定します。<br>
+	実際に優先順位に従って描画を行う場合には、es_draw命令で表示するスプライトの優先順位設定パラメーターを指定する必要があります。
+	</p>
+	<pre>
+		es_draw p1,p2,p3,p4,p5		スプライト描画
+			p1=描画開始スプライトNo.
+			p2(-1)=描画するスプライトの個数
+			p3(0)=処理保留フラグ
+			p4(-1)=優先順位の開始値
+			p5(-1)=優先順位の終了値</pre>
+	<p>
+	es_draw命令は、多くのパラメーターを持っています。
+	登録されているスプライトの一部だけを描画したい場合は、p1に開始スプライトNo.、p2に描画する個数を指定してください。<br>
+	p1,p2の指定を省略した場合は、すべてのスプライトが描画対象になります。<br>
+	p3パラメーターにより、内部処理を保留することができます。
+	</p>
+	<pre>
+		 値     マクロ名          内容
+		------------------------------------------------------------------------
+		  0  ESDRAW_NORMAL        すべての処理を実行する
+		  1  ESDRAW_NOMOVE        移動処理を保留する
+		  2  ESDRAW_NOANIM        アニメーションを保留する
+		  4  ESDRAW_NOCALLBACK    コールバックルーチンを保留する
+		  8  ESDRAW_NODISP        表示を保留する
+		 16  ESDRAW_NOSORT        ソートを保留する</pre>
+	<p>
+	通常は、命令を実行すると、スプライト移動→アニメーション処理→表示処理→コールバック処理が実行されますが、それぞれの処理ごとに保留させることができます。<br>
+	ESDRAW_NO*マクロは加算することで同時に指定することが可能です。
+	これにより一時的に移動やアニメーションを停止させることができます。通常は、p3パラメーターを省略しておいて問題ありません。<br>
+	p4,p5パラメーターを指定すると、es_set命令やes_setpri命令で指定した優先順位が参照され、値の順にソートしてスプライトを描画します。その際に、p3～p4の範囲だけを描画させることが可能です。<br>
+	p4,p5パラメーターを指定した場合は、スプライトの優先順位に従ってソートされ、優先順位の値が大きいものが手前に表示されます。(ただし、処理保留フラグにESDRAW_NOSORTが指定されている場合は、ソートを無効にします)
+	p4,p5パラメーターがマイナスか省略された場合は、優先順位の値は無視され、スプライトNo.が小さいほど手前の表示となります
 	</p>
 
 
@@ -610,20 +784,145 @@
 	<h2 id="EFFECT_SPRITE">スプライトの変形と効果</h2>
 
 	<p>
+	スプライトの特殊効果と変更のための命令が用意されています。
+	これらの機能は、もともとのHSPDXプラグインではサポートしていなかったものになります。
+	</p>
+	<pre>
+		es_setrot p1,p2,p3,p4		スプライト回転角度・表示倍率設定
+			p1=スプライトNo.
+			p2(0)=角度値
+			p3(-1)=X方向の表示倍率(%)
+			p4(-1)=Y方向の表示倍率(%)</pre>
+	<p>
+	p1で指定したスプライトの回転角度、及び表示倍率を変更します。
+	p2で指定した角度にスプライトが回転されます。p2の値は0以上の整数で大きい値ほど右回りに回転していきます。角度が一周する値は、es_ini命令で指定されます。<br>
+	(p3,p4)パラメーターによりX,Y方向の表示倍率を変更します。
+	p3またはp4の値を省略するかマイナス値の場合は、それまでの倍率を変更せずに保持します。
+	表示倍率は100%を1倍として換算します。250を指定した場合は、2.5倍となります。
+	es_set命令でスプライトを設定した直後は、角度は0に倍率は100%になっています。<br>
+	また、スプライトの合成に関する効果を設定するためにes_effect命令は以下のパラメーターを持っています。
+	</p>
+	<pre>
+		es_effect p1,p2,p3		スプライト特殊効果設定
+			p1=スプライトNo.
+			p2($3ff)=エフェクトパメーター(EP値)
+			p3(-1)=ライト色RGB値(0～$ffffff)(未実装)</pre>
+	<p>
+	スプライトを描画する際のエフェクト(特殊効果)を設定します。
+	p2で指定する値は、EP値と呼ばれており以下の意味を持っています。
+	</p>
+	<pre>
+		  EP値     内容
+		-----------------------------------------------------------
+		  0～255   αチャンネル値(0=透明、255=不透明)
+		  +$300    αチャンネルによる合成を有効にする(gmode3相当)
+		  +$500    元の画像に対して加算合成を行う(gmode5相当)
+		  +$600    元の画像に対して減算合成を行う(gmode6相当)</pre>
+	<p>
+	この値は、αチャンネル値とgmode命令による合成パラメーターを合わせたものになっています。<br>
+	gmodeで設定するモード値を256倍(16進数で$100)したものに、半透明レート(αチャンネル値)を加算したものがEP値になります。
+	デフォルト値は、$3ff(αチャンネル=255、gmode3相当)が設定されています。<br>
+	p3パラメーターにより、スプライト描画時に特定のライト色を乗算することができます。このパラメーターは現在未実装となっています。
 	</p>
 
 
 	<h2 id="CALLBACK_SPRITE">スプライトコールバック</h2>
 
 	<p>
+	スプライトコールバックは、スプライトを表示した際に特定のラベルを呼び出す機能です。
+	これにより、有効なスプライト1つ1つに対して、必要な処理だけをサブルーチンとして記述することができます。
 	</p>
-
+	<pre>
+		es_setgosub p1,p2		スプライト表示コールバック設定
+			p1=スプライトNo.
+			p2=設定するサブルーチンのラベル</pre>
+	<p>
+	p1で指定したスプライトの表示コールバックを設定します。<br>
+	p2でサブルーチンのラベルを指定します。以降は、そのスプライトが表示されるごとにgosub命令と同様にサブルーチンが呼び出されます。<br><br>
+	実際にサブルーチンが呼び出された際には、システム変数iparamにスプライトNo.が、
+	wparamにtype値が、lparamにキャラクタNo.が代入されます。<br>
+	呼び出しを行う際のサブルーチンは、コールバックルーチンとして機能します。
+	時間待ちなど一部の命令を実行できないので注意してください。詳しくは、プログラミング・マニュアルの<a href="hspprog.htm#CALLBACK">コールバックルーチン</a>を参照してください。
+	</p>
 
 	<h2 id="MAP_SPRITE">BGマップ描画機能</h2>
 
 	<p>
+	BGマップ描画機能は、タイル状の平面をまとめて描画するものです。スプライトとは独立した形で使用することができます。
+	BGマップにより、パーツを組み合わせた背景や、定型サイズの文字フォントを並べたテキスト領域などを管理することができます。<br>
+	BGマップ描画に関する命令は3つ用意されています。es_bgmap命令は、BGマップを初期化するための命令です。
 	</p>
-
+	<pre>
+		es_bgmap p1,p2,p3,p4,p5,p6,p7,p8	BGマップを初期化
+			p1=BGNo.(0～15)
+			p2=マップデータを格納する変数名
+			p3(16)=マップ全体のXサイズ
+			p4(16)=マップ全体のYサイズ
+			p5(16)=マップ表示部分のXサイズ
+			p6(16)=マップ表示部分のXサイズ
+			p7(0)=マップパーツを格納する画面バッファID
+			p8(0)=設定オプション</pre>
+	<p>
+	任意のサイズを持つBGマップを初期化します。
+	p1で初期化するBGNo.を指定します。BGNo.は0～15までを指定可能です。<br>
+	p2にマップデータを格納する変数を指定します。
+	この変数はあらかじめ、「マップ全体のXサイズ×マップ全体のYサイズ」の要素を持つ配列変数としてdim命令で初期化されている必要があります。<br>
+	(p3,p4)でマップ全体のX,Yサイズを指定します。
+	(p5,p6)でマップを表示する部分のX,Yサイズを指定します。
+	p3～p6のパラメーターは、いずれもマップパーツの単位となります。
+	p7パラメーターで、マップパーツの画像が読み込まれている画面バッファIDを指定します。このバッファには、あらかじめpicloadまたはcelload命令により画像を読み込んでおく必要があります。(マップパーツ画像は、celdiv命令によりパーツサイズを設定してください。)<br>
+	p8の設定オプションにより、BGマップの挙動を設定します。この項目は、将来拡張するための項目で現在は未実装となっています。
+	</p>
+	<pre>
+	mapsx=4:mapsy=4				; マップサイズ
+	dim map,mapsx*mapsy			; マップデータ変数
+	celdiv 3,64,64				; マップのセル設定
+	es_bgmap 0,map,mapsx,mapsy,mapsx,mapsy,3	; マップ登録</pre>
+	<p>
+	上の例では、全体サイズを4×4だとして、「dim map,4*4」で初期化した変数mapを指定しています。<br>
+	この変数は、直接マップデータの内容を持ち、値が0の場合は、マップパーツ(セルID)が0というように、パーツのIDをそのまま代入したり参照することができます。
+	</p>
+	<pre>
+	map(0)=1:map(5)=6			; マップデータを設定
+	</pre>
+	<p>
+	es_bgmap命令はマップ表示に関する設定を内部に登録します。
+	マップ情報は、0～15までのBGNo.で分類され、同時に16種類のマップを保持することができます。(マップ情報は、es_ini命令で初期化するまで保持され続けます)<br>
+	実際のマップ表示は、es_putbg命令で行います。
+	</p>
+	<pre>
+		es_putbg p1,p2,p3,p4,p5			BGマップを表示
+			p1=BGNo.(0～15)
+			p2(0)=表示開始X座標
+			p3(0)=表示開始Y座標
+			p4(0)=表示開始マップX位置
+			p5(0)=表示開始マップY位置</pre>
+	<p>
+	es_putbg命令は、指定されたBGNo.のBGマップを表示します。
+	あらかじめes_bgmap命令でBGマップのサイズやパーツ情報などを初期化する必要があります。<br>
+	(p2,p3)パラメーターで画面上の表示開始位置(左上)を指定します。
+	(p4,p5)パラメーターでマップの表示開始位置(左上)を指定します。
+	通常は、マップ全体の中で(0,0)の位置からマップを表示します。
+	マップの表示開始位置を指定することにより、全体マップの一部を表示している時の、左上にあたるマップの位置を変更することができます。<br>
+	これにより、BGマップをスクロールさせることが可能です。<br>
+	BGマップを使って、固定サイズの英字フォントを表示させることが可能です。
+	mes命令の代わりにes_bgmes命令を使用することができます。
+	</p>
+	<pre>
+		es_bgmes p1,p2,p3,"str",p4		BGマップに文字列を書き込み
+			p1(0)=BGNo.(0～15)
+			p2(0)=マップX位置
+			p3(0)=マップY位置
+			"str"=書き込み文字列
+			p4(0)=文字コードオフセット値</pre>
+	<p>
+	指定されたBGNo.のBGマップに、"str"で指定された文字列のコードを書き込みます。
+	あらかじめes_bgmap命令でBGマップのサイズやパーツ情報などを初期化する必要があります。
+	es_bgmes命令は、BGマップとしてASCIIコード順の文字フォントを表示できる状態であることを前提に動作します。<br>
+	(p2,p3)で指定されたマップの位置から、文字列に含まれる文字コードを右に向かって書き込みます。<br>
+	p4パラメーターで、文字コードに対するオフセット値を指定します。通常は0か省略して構いません。たとえば「A」という文字は文字コード65で、65という値をマップに対して書き込みます。
+改行コードが含まれている場合は、次の行に移動します。
+	</p>
 
 
 	<!-- フッター -->
