--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -16,7 +16,7 @@
 	<!-- ヘッダー -->
 	<p id="COPY">HSP : HSP3Dish / onion software 2020(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
-	<h1>HSP3Dish プログラミングマニュアル・基本仕様ガイド</h1>
+	<h1>HSP3Dish プログラミングマニュアル</h1>
 
 	<!-- 目次 -->
 	<ol>
@@ -24,6 +24,10 @@
 		<li><a href="#DISHUSE">HSP3Dishの使用方法</a></li>
 		<li><a href="#DRAWDIFF">HSP3との差異</a></li>
 		<li><a href="#BUTTON">配置オブジェクトについて</a><span class="new">（New!）</span></li>
+		<li><a href="#SPRITE">標準スプライトについて</a><span class="new">（New!）</span></li>
+		<li><a href="#SCREEN">スクリーンサイズ変更について</a><span class="new">（New!）</span></li>
+		<li><a href="#VIEWCALC">viewcalc命令による座標変換について</a><span class="new">（New!）</span></li>
+		<li><a href="#CELBITMAP">celbitmap命令による画像データ制御について</a><span class="new">（New!）</span></li>
 		<li><a href="#GMODE">gmode命令について</a></li>
 		<li><a href="#GMULCOLOR">gmulcolor命令について</a></li>
 		<li><a href="#GFILTER">gfilter命令について</a></li>
@@ -219,6 +223,147 @@
 	今後多くのプラットフォームで、配置オブジェクトを幅広くサポートする予定です。
 	</p>
 
+
+	<h2 id="SPRITE">標準スプライトについて</h2>
+		<p>
+		HSP3Dish、HGIMG4ランタイムでは、手軽に使用できる<a href="sprite.html">標準スプライト</a>をサポートしました。<br>
+		標準スプライトの命令は、hspdxプラグインとして追加されていた命令と互換があり、2D描画を手軽に扱うことが可能です。
+		<p>
+		<p><img src="hsp3dish/es_test5.jpg"></p>
+		<p>
+		HSP3で2D描画を行う際に、スプライト(矩形の画像)を利用するための手段はいくつか用意されていました。
+		</p>
+		<pre class="quote">
+		・HSPDXプラグイン
+		・HGIMG/HGIMGXプラグイン
+		・HGIMG3プラグイン
+		・HGIMG4プラグイン
+		・mod_spriteモジュール</pre>
+		<p>
+		この中で、HSPDX、HGIMG、HGIMGXまでのプラグインはHSP2時代のもので、すでに開発が終了しており、
+		現在のOSや環境で動作させることが困難になっています。<br>
+		HGIMG3/HGIMG4プラグインには、3D機能とともに高機能な2Dスプライトとしての
+		機能も持っていますが、座標をすべて実数で管理し、機能が多い代わりに
+		習得する内容も増えて手軽には扱いずらい所がありました。<br>
+		今回、最も長い歴史があり、多くのユーザーが使用してきたHSPDXプラグインの
+		命令をもとに、手軽で扱いやすい2D専用のスプライト命令を拡充しました。<br>
+		シンプルな命令でスプライトを表示でき、スプライトの画像を自由に登録できる
+		柔軟なシステムを搭載しています。また、スプライトコールバックやマップ描画など
+		ユニークな仕組みも導入され、元のHSPDXプラグインよりも利便性向上しています。<br>
+		座標も整数で管理されており、2DゲームやUI表示などで扱いやすいものになっています。
+		もちろんイベントリストによる自律移動や3Dとの連携については、従来のプラグインを利用することもできます。<br>
+		標準スプライトは、HSP3Dish、HGIMG4がサポートする全プラットフォームで動作するほか、
+		HSP3標準ランタイムでもサポートすることを予定しています。<br>
+		標準スプライトの詳細は、<a href="sprite.htm">「標準スプライトプログラミングガイド」</a>を参照してください。
+		</p>
+
+
+	<h2 id="SCREEN">のスクリーンサイズ変更について</h2>
+		<p>
+		HSP3Dish、HGIMG4のWindows/Linux版において、スクリーン(ウインドウ)サイズの動的な変更に対応しました。(HSP3.6β2以降)<br>
+		いままでは、hsp3dish.iniファイルに記録されたサイズに従って起動時にサイズが固定されていましたが、
+		多くの方からサイズの変更とフルスクリーン対応の要望を頂き、修正致しました。
+		HSP3.6より、screen命令,bgscr命令によりスクリーン(ウインドウ)サイズを変更できます。
+		</p><pre>
+	screen p1,p2,p3,p4,p5,p6
+
+	p1=0～(0) : ウィンドウID
+	p2=1～(640): 初期化する画面サイズX（1ドット単位）
+	p3=1～(480): 初期化する画面サイズY（1ドット単位）
+	p4=0～1(0) : 初期化する画面モード
+	p5=0～(-1) : ウィンドウの配置X（1ドット単位）
+	p6=0～(-1) : ウィンドウの配置Y（1ドット単位）
+		</pre><p>
+		p1のウインドウIDは、0のみとなります。
+		p4の初期化モードは、以下の値を指定することができます。
+		</p><pre>
+	  +4(screen_fixedsize) : サイズ固定ウィンドウ
+	  +8(screen_tool)      : ツールウィンドウ
+	 +16(screen_frame)     : 深い縁のあるウィンドウ
+	 +256                  : フルスクリーン
+		</pre><p>
+		p4に256を指定した場合は、指定された解像度のフルスクリーンとして初期化されます。<br>
+		また、スクリーンサイズ変更時は、通常ランタイムとは異なり、それまでに読み込んだすべての画像バッファは失われますので注意してください。
+		</p>
+
+
+	<h2 id="VIEWCALC">viewcalc命令による座標変換について</h2>
+		<p><img src="img/hsp36_viewcalc.png"></p>
+		<p>
+		HSP3Dish、HGIMG4において、描画時の座標変換を設定するviewcalc命令を追加しました。<br>
+		viewcalc命令は、2D描画時のX,Y座標に任意の計算を適用することができる強力な機能です。
+		描画される表示物全体のスケーリングや移動、回転などを行うことができます。
+		</p><pre>
+	viewcalc p1,p2,p3,p4,p5
+
+	p1(0)   : 設定モード
+	p2(0.0) : パラメーター1(実数)
+	p3(0.0) : パラメーター2(実数)
+	p4(0.0) : パラメーター3(実数)
+	p5(0.0) : パラメーター4(実数)
+		</pre><p>
+		p1で指定する設定モードには、いくつかの種類があり多彩な変換を行うことが可能です。
+		</p><pre>
+	マクロ名            値   内容
+	-----------------------------------------------------
+	vptype_off           0   座標変換なし(デフォルト)
+	vptype_translate     1   移動パラメーターを指定
+	vptype_rotate        2   回転パラメーターを指定
+	vptype_scale         3   スケールパラメーターを指定
+	vptype_3dmatrix      4   4×4マトリクスによる座標変換
+	vptype_2d            5   2D座標変換を設定
+	vptype_3d            6   3D座標変換を設定
+		</pre><p>
+		vptype_2dは、基本的な2D座標変換を適用するモードになっています。
+		パラメーター1～3で、X,Yのスケール(倍率)、回転角度(ラジアン単位)を設定することができます。
+		</p><pre>
+	viewcalc vptype_2d, 2.0, 2.0, 0.0
+		</pre><p>
+		のように指定した場合は、X,Y方向に2倍のスケールで表示、角度は0となります。<br>
+		他にも色々なパラメーターを指定できます。詳しくは、viewcalc命令のヘルプを参照してください。
+		</p>
+
+
+	<h2 id="CELBITMAP">celbitmap命令による画像データ制御について</h2>
+		<p>
+		HSP3Dish、HGIMG4において、変数バッファの内容を画像データとして扱うためのcelbitmap命令を追加しました。<br>
+		これまで、HSP3Dishではドット単位の画像データに直接アクセスすることができませんでしたが、この命令によりメモリの内容を画像データとして読み書きできるようになります。
+		</p><pre>
+	celbitmap p1,var,p2
+
+	p1(0)   : ウインドウID
+	var     : イメージを置き換えるための配列変数
+	p2(0)   : 動作オプション
+		</pre><p>
+		celbitmap命令を使用する際には、あらかじめbuffer命令により作成したオフスクリーンバッファと、置き換えるための変数バッファを初期化する必要があります。<br>
+		オフスクリーンバッファは、buffer命令でscreen_offscreenのオプションを指定して作成してください。
+		</p><pre>
+	buffer 2,256,256,screen_offscreen
+		</pre><p>
+		その後、バッファを置き換えるための変数バッファを作成します。<br>
+		dim命令により、１次元配列を初期化して作成してください。作成するサイズは、オフスクリーンバッファのXサイズ×Yサイズになります。
+		</p><pre>
+	dim bitmap, 256*256
+		</pre><p>
+		これで、celbitmap命令を使用する準備が整いました。<br>
+		celbitmap命令により、オフスクリーンバッファのIDと配列変数を指定することで、変数バッファの内容がそのまま画像イメージとして適用されます。<br>
+		変数バッファは、1要素あたり1ドットとなります。1ドットは、32bitの要素をR,G,B,Aそれぞれ8bit単位で格納されるRGB形式のデータとなります。(3.6β2版と3.6β3版でRGBの並び順が変更になっています。ご注意ください)<br>
+		たとえば、「$ff204080」(16進数)を指定した場合は、A=$ff(255)、B=$20(32)、G=$40(64)、R=$80(128)となります。(カッコ内は10進数)<br>
+		画像データの置き換えは、コストの高い処理になるため、大きなサイズのイメージを置き換える場合、フレームレートが下がることがありますので注意してください。<br>
+		p2パラメーターにより、置き換えの形式や動作を指定することができます。
+		</p><pre>
+	 値  マクロ             動作
+	---------------------------------------------------------
+	  0  celbitmap_rgb      $aabbggrr形式でデータを保持する
+	  1  celbitmap_bgr      $aarrggbb形式でデータを保持する
+	  16 celbitmap_capture  描画画面の内容を変数に読み出す
+		</pre><p>
+		通常は、OpenGLの標準に合わせたcelbitmap_rgbの形式が使用されます。オプションにcelbitmap_bgrを指定した場合は、DirectX標準に合わせたARGBの並びになります。<br>
+		celbitmap_captureを指定した場合は、描画先の画面上のデータを配列変数に読み出します。(読み出しのサイズはオフスクリーンバッファのサイズになります)<br>
+		※celbitmap_captureオプションは、実験的な実装です。現在は、Windows(DirectX版HGIMG4を除く)、Linux版でのみ使用できますのでご了承ください。
+		</p>
+
+
 	<h2 id="GMODE">gmode命令について</h2>
 	<p>
 	hsp3dishでは、celput、gcopy等の画像コピー命令で、アルファチャンネルを含めた
@@ -338,8 +483,8 @@
 	<h2 id="MTOUCH">マルチタッチ情報の取得について</h2>
 	<p>
 	hsp3dish ver3.4b1から、マルチタッチ情報の取得を行なうmtlist、mtinfo命令が追加されています。
-	これにより、スマートフォン(iOS,Android)上で複数のポイントにタッチされている情報を得ることが可能です。
-	Windows上でも、Windows7以降のマルチタッチデバイスが接続されている場合は、複数のタッチ情報を取得可能です。<br>
+	これにより、スマートフォン上で複数のポイントにタッチされている情報を得ることが可能です。
+	Windows、Linux、html5(ブラウザ)上でも、マルチタッチデバイスが接続されている場合は、複数のタッチ情報を取得可能です。
 	</p>
 	<pre>
 		mtlist var			ポイントIDリスト取得
