--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -541,10 +541,11 @@
 		HSP3Dish、HGIMG4において、変数バッファの内容を画像データとして扱うためのcelbitmap命令を追加しました。<br>
 		これまで、HSP3Dishではドット単位の画像データに直接アクセスすることができませんでしたが、この命令によりメモリの内容を画像データとして読み書きできるようになります。
 		</p><pre>
-	celbitmap p1,var
+	celbitmap p1,var,p2
 
 	p1(0)   : ウインドウID
 	var     : イメージを置き換えるための配列変数
+	p2(0)   : 動作オプション
 		</pre><p>
 		celbitmap命令を使用する際には、あらかじめbuffer命令により作成したオフスクリーンバッファと、置き換えるための変数バッファを初期化する必要があります。<br>
 		オフスクリーンバッファは、buffer命令でscreen_offscreenのオプションを指定して作成してください。
@@ -558,9 +559,20 @@
 		</pre><p>
 		これで、celbitmap命令を使用する準備が整いました。<br>
 		celbitmap命令により、オフスクリーンバッファのIDと配列変数を指定することで、変数バッファの内容がそのまま画像イメージとして適用されます。<br>
-		変数バッファは、1要素あたり1ドットとなります。1ドットは、32bitの要素をA,R,G,Bそれぞれ8bit単位で格納されるARGB形式のデータとなります。
-		たとえば、「$ff204080」(16進数)を指定した場合は、A=$ff(255)、R=$20(32)、G=$40(64)、B=$80(128)となります。(カッコ内は10進数)<br>
-		画像データの置き換えは、コストの高い処理になるため、大きなサイズのイメージを置き換える場合、フレームレートが下がることがありますので注意してください。
+		変数バッファは、1要素あたり1ドットとなります。1ドットは、32bitの要素をR,G,B,Aそれぞれ8bit単位で格納されるRGB形式のデータとなります。(3.6β2版と3.6β3版でRGBの並び順が変更になっています。ご注意ください)<br>
+		たとえば、「$ff204080」(16進数)を指定した場合は、A=$ff(255)、B=$20(32)、G=$40(64)、R=$80(128)となります。(カッコ内は10進数)<br>
+		画像データの置き換えは、コストの高い処理になるため、大きなサイズのイメージを置き換える場合、フレームレートが下がることがありますので注意してください。<br>
+		p2パラメーターにより、置き換えの形式や動作を指定することができます。
+		</p><pre>
+	 値  マクロ             動作
+	---------------------------------------------------------
+	  0  celbitmap_rgb      $aabbggrr形式でデータを保持する
+	  1  celbitmap_bgr      $aarrggbb形式でデータを保持する
+	  16 celbitmap_capture  描画画面の内容を変数に読み出す
+		</pre><p>
+		通常は、OpenGLの標準に合わせたcelbitmap_rgbの形式が使用されます。オプションにcelbitmap_bgrを指定した場合は、DirectX標準に合わせたARGBの並びになります。<br>
+		celbitmap_captureを指定した場合は、描画先の画面上のデータを配列変数に読み出します。(読み出しのサイズはオフスクリーンバッファのサイズになります)<br>
+		※celbitmap_captureオプションは、実験的な実装です。現在は、Windows(DirectX版HGIMG4を除く)、Linux版でのみ使用できますのでご了承ください。
 		</p>
 
 
