--- a/package/win32/hsp3dish.htm
+++ b/package/win32/hsp3dish.htm
@@ -20,7 +20,7 @@
 		
 		<!-- 本文 -->
 		<ul>
-			<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
+			<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル（hsp3dish_prog.htm）</a></li>
 			<li><a href="doclib/sprite.html">標準スプライトプログラミングガイド（sprite.html）</a></li>
 			<li><a href="doclib/hgimg4.html">HGIMG4プログラミングガイド（hgimg4.html）</a></li>
 			<ul>
