--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -40,7 +40,7 @@
 			<li><a href="http://hsp.tv/make/tamane2d.html">HSP3オフィシャル2D素材 "珠音（たまね）"（外部webページ）</a></li>
 	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
 			<ul>
-				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
+				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル（hsp3dish_prog.htm）</a></li>
 				<li><a href="doclib/sprite.html">標準スプライトプログラミングガイド（sprite.html）</a></li>
 				<li><a href="doclib/hgimg4.html">HGIMG4プログラミングガイド（hgimg4.html）</a></li>
 				<ul>
