ドキュメントの更新
Former-commit-id: 8c6fc4320e8941c42314cabe9b0c53e106bf80e7

--- a/package/win32/hsp3dish.htm
+++ b/package/win32/hsp3dish.htm
@@ -29,6 +29,7 @@
 			<li><a href="doclib/hsp3dish_js.htm">WebGL/html5版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
 			<li><a href="doclib/hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
 			<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
+				<li><a href="doclib/hsp3linux_pi.html">HSP3 for Linux/Raspberry Pi（hsp3linux_pi.html）</a></li>
 			<li><a href="doclib/hsp3cnv.txt">HSP3ソースコンバーター・マニュアル（hsp3cnv.txt）</a></li>
 		</ul>
 
