HSP3Dishの細かな調整
Former-commit-id: e6bacb8c4e331b564fa5f9e19b85907256da13e8

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -753,7 +753,10 @@
 			<a href="https://github.com/StreamletStudio/ZLibWrap" target="_blank">ZLibWrap.dll</a>は、StreamletStudioが作成し公開されているものを同梱させていただきました。
 		</p>
 		<p>
-			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、ue_daiさん、kurogomaさん、inoviaさん、窓月ららさんに感謝致します。
+			HSPTVフォルダ内のフリー素材は、Y-Jinnさん、NAO・Graphics・Lab'さん、他の皆様が製作したものを許可を頂いた上で同梱させていただきました。
+		</p>
+		<p>
+			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、ue_daiさん、kurogomaさん、inoviaさん、窓月ららさん、Dripさん、zakkiさんに感謝致します。
 		</p>
 		<p>
 			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
