シンプルな効果音をhsptv素材として追加
Former-commit-id: 581f115294a318b4260e9dabab9c5d24fd2dfee4

--- a/package/win32/doclib/hsptv_res.htm
+++ b/package/win32/doclib/hsptv_res.htm
@@ -198,6 +198,21 @@
 	<a href="../hsptv/se_shot.wav">se_shot.wav</a>
 	<a href="../hsptv/se_shot2.wav">se_shot2.wav</a>
 	<a href="../hsptv/se_tyuiin.wav">se_tyuiin.wav</a>
+	<a href="../hsptv/se01.wav">se01.wav</a>
+	<a href="../hsptv/se02.wav">se02.wav</a>
+	<a href="../hsptv/se03.wav">se03.wav</a>
+	<a href="../hsptv/se04.wav">se04.wav</a>
+	<a href="../hsptv/se05.wav">se05.wav</a>
+	<a href="../hsptv/se06.wav">se06.wav</a>
+	<a href="../hsptv/se07.wav">se07.wav</a>
+	<a href="../hsptv/se08.wav">se08.wav</a>
+	<a href="../hsptv/se09.wav">se09.wav</a>
+	<a href="../hsptv/se10.wav">se10.wav</a>
+	<a href="../hsptv/se11.wav">se11.wav</a>
+	<a href="../hsptv/se12.wav">se12.wav</a>
+	<a href="../hsptv/se13.wav">se13.wav</a>
+	<a href="../hsptv/se14.wav">se14.wav</a>
+	<a href="../hsptv/se15.wav">se15.wav</a>
 
 		</pre>
 
