--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -26,6 +26,7 @@
 		<li><a href="#BROWSE">ブラウザ上での実行</a></li>
 		<li><a href="#SCRSIZE">表示サイズのスケーリング</a></li>
 		<li><a href="#MEDIA">メディアファイルの再生</a></li>
+		<li><a href="#EXEC">exec,dialog命令によるブラウザ制御<span class="new">（New!）</span></a></li>
 		<li><a href="#NOTICE">制限事項・既知の問題点</a></li>
 		<li><a href="#FUTURE">今後の予定</a></li>
 		<li><a href="#LICENSE">ライセンス・謝辞</a></li>
@@ -96,7 +97,7 @@
 	<li>メモリサイズ</li><br><p>
 	ブラウザ実行時に確保されるメモリブロックの上限値を設定することができます。
 	空欄の場合は、デフォルトの値(200メガバイト)が使用されます。
-	通常は、デフォルト値で問題ありませんが、規模の大きいスクリプトや膨大なデータを使用する場合は、100よりも大きい値を指定してください。(32を指定した場合は、32メガバイトとなります。)<br>
+	通常は、デフォルト値で問題ありませんが、規模の大きいスクリプトや膨大なデータを使用する場合は、100よりも大きい値を指定してください。(500を指定した場合は、500メガバイトとなります。)<br>
 	(ブラウザ実行時に、hsp3dish.jsコンソールに「Cannot enlarge memory arrays.」という表示が出る場合は、メモリブロックの上限値を調整してみてください。)
 	</p>
 	<li>HGIMG4を使用する</li><br><p>
@@ -215,6 +216,35 @@
 	</p>
 
 
+	<h2 id="EXEC">exec,dialog命令によるブラウザ制御</h2>
+	<p>
+	dialog命令により、標準的なブラウザのダイアログを表示することができます。
+	(標準ダイアログ以外のコモンダイアログはサポートしていません)
+	<br>
+	exec命令により、より細かいレベルでブラウザを制御することが可能です。
+	通常のexec命令は、OSのコマンドを呼び出すための機能ですが、
+	hsp3dish.jsでは、JavaScriptのコードを直接実行させる役割を持っています。
+	</p>
+	<ul><pre>
+		exec "alert('TEST');"
+	</pre></ul>
+	<p>
+	これにより、JavaScriptが持つ機能をHSPスクリプトの中から呼び出すことができます。
+	ただし、JavaScriptの文法でエラーが発生した場合は、ブラウザのエラーで停止することが
+	ありますので注意して記述してください。<br>
+	exec命令のオプション値に16を指定することにより、新しく開くページのURLを指定することができます。
+	</p>
+	<ul><pre>
+		exec "https://hsp.tv",16
+	</pre></ul>
+	<p>
+	この例では、「https://hsp.tv」のURLを新しくブラウザで開きます。
+	<br>
+	exec命令により、HSP側のプログラムと連携して、WEBページを開いたり
+	ブラウザの表示を変更するなどの処理が可能になります。
+	</p>
+
+
 	<h2 id="NOTICE">制限事項・既知の問題点</h2>
 	<p>
 	現在のバージョンでは、以下の制限事項があります。
@@ -222,7 +252,6 @@
 	</p>
 	<ul><pre>
 		・メディア関連の機能(ブラウザ、ファイルタイプによる制限あり)
-		・exec,dialog命令(未サポート)
 		・HGIMG4のオフスクリーン描画命令は未サポート
 		・DPMファイルは使用できません
 		・bsave命令などファイルの静的な保存はできません
