--- a/package/win32/doclib/hsptv_res.htm
+++ b/package/win32/doclib/hsptv_res.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2019(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2020(c)</p>
 		<h1>HSPTVフォルダ素材一覧</h1>
 
 		<h2 id="ABOUT">素材について</h2>
@@ -25,7 +25,7 @@
 		</p>
 		<pre>
 		HSP3.6 WebDish素材データ
-		https://dev.onionsoft.net/seed/webdish_res.html
+		<a href="https://dev.onionsoft.net/seed/webdish_res.html" target="_blank">https://dev.onionsoft.net/seed/webdish_res.html</a>
 		</pre>
 
 		<h2 id="USEAGE">素材の参照</h2>
@@ -37,13 +37,53 @@
 		</pre>
 		<p>
 		「dir_tv+」に続けてファイル名を記述することで、HSPTVフォルダが参照されます。
-		(HSP3Dishでは、標準でHSPTVフォルダ内の素材が検索されます。)<br>
+		(HSP3Dishでは、dir_tvを入れなくても標準でHSPTVフォルダ内の素材が検索されます。)<br>
 		実行ファイルを作成して配布する場合は、必要な素材だけを#packまたは#epack命令で
-		リソースとして追加する必要がありますので注意してください。
+		リソースとして追加する必要がありますので注意してください。<br>
+		HSP3.6β3以降では、リソースをまとめて読み込むためのモジュールが用意されています。
 		</p>
+		<pre>
+			#include "hsptv_res.as"
+		</pre>
+		<p>
+		スクリプトの最初で上のような記述を行うことで、以下の命令が追加されます。
+		</p>
+		<pre>
+		hsptv_se _p1		効果音をまとめて読み込む
+			_p1 : 1=シンプル効果音(SE01～SE15)
+			_p1 : 2=リアル効果音(SND01～SND19)
+		(以降は mmplay SE01 などで再生できます)
+
+		hsptv_tamadot _p1	珠音ちゃん2Dドット絵素材を読み込む
+			_p1 : 0=64×64 1=32×32
+		( tamadot に画面バッファIDが代入されます )
+		( ceput tamadot,番号 で表示できるようになります )
+
+		hsptv_tamane _p1	珠音ちゃん2D立ち絵素材を読み込む
+			_p1 : 0=256×512ドット、1～8=512×1024ドット
+		( tamas に画面バッファIDが代入されます )
+		( ceput tamas,番号 で表示できるようになります )
+
+		hsptv_tamasc _p1	珠音ちゃん制服素材を読み込む
+			_p1 : 1～5(バリエーション)
+		( tamasc に画面バッファIDが代入されます )
+
+		hsptv_keisc _p1		プロ生ちゃん制服素材を読み込む
+			_p1 : 1～5(バリエーション)
+		( keisc に画面バッファIDが代入されます )
+
+		hsptv_tamawiz _p1	珠音ちゃん魔法使い素材を読み込む
+			_p1 : 1～10(バリエーション)
+		( tamawiz に画面バッファIDが代入されます )
+
+		hsptv_keiknight _p1	プロ生ちゃん騎士使い素材を読み込む
+			_p1 : 1～10(バリエーション)
+		( keiknight に画面バッファIDが代入されます )
+		</pre>
 
 		<h2 id="GRAPHICS">画像一覧</h2>
 		<pre>
+
 	<a href="../hsptv/baku.png">baku.png</a>
 	<a href="../hsptv/ball64.png">ball64.png</a>
 	<a href="../hsptv/bg.png">bg.png</a>
@@ -73,6 +113,7 @@
 	<a href="../hsptv/fontchr.png">fontchr.png</a>
 	<a href="../hsptv/gamechr.png">gamechr.png</a>
 	<a href="../hsptv/hsp3dish.png">hsp3dish.png</a>
+	<a href="../hsptv/hsp3scr.jpg">hsp3scr.jpg</a>
 	<a href="../hsptv/hsptv_img.png">hsptv_img.png</a>
 	<a href="../hsptv/janbg.png">janbg.png</a>
 	<a href="../hsptv/janpai.png">janpai.png</a>
@@ -121,6 +162,15 @@
 	<a href="../hsptv/sozai9.jpg">sozai9.jpg</a>
 	<a href="../hsptv/tamadot.png">tamadot.png</a>
 	<a href="../hsptv/tamaface.png">tamaface.png</a>
+	<a href="../hsptv/tamane_b.png">tamane_b.png</a>
+	<a href="../hsptv/tamane_b1.png">tamane_b1.png</a>
+	<a href="../hsptv/tamane_b2.png">tamane_b2.png</a>
+	<a href="../hsptv/tamane_b3.png">tamane_b3.png</a>
+	<a href="../hsptv/tamane_b4.png">tamane_b4.png</a>
+	<a href="../hsptv/tamane_b5.png">tamane_b5.png</a>
+	<a href="../hsptv/tamane_b6.png">tamane_b6.png</a>
+	<a href="../hsptv/tamane_b7.png">tamane_b7.png</a>
+	<a href="../hsptv/tamane_b8.png">tamane_b8.png</a>
 	<a href="../hsptv/tamane_s.png">tamane_s.png</a>
 	<a href="../hsptv/tamane_s1.png">tamane_s1.png</a>
 	<a href="../hsptv/tamane_s2.png">tamane_s2.png</a>
@@ -158,6 +208,7 @@
 
 		<h2 id="SOUND">サウンド一覧</h2>
 		<pre>
+
 	<a href="../hsptv/bgm04.mid">bgm04.mid</a>
 	<a href="../hsptv/bgm06.mid">bgm06.mid</a>
 	<a href="../hsptv/bgm1.mid">bgm1.mid</a>
@@ -178,26 +229,10 @@
 	<a href="../hsptv/bgm7.mid">bgm7.mid</a>
 	<a href="../hsptv/bgm8.mid">bgm8.mid</a>
 	<a href="../hsptv/bgm9.mid">bgm9.mid</a>
-
 	<a href="../hsptv/explos.wav">explos.wav</a>
 	<a href="../hsptv/inject.wav">inject.wav</a>
 	<a href="../hsptv/jp_dead.wav">jp_dead.wav</a>
 	<a href="../hsptv/jp_jump.wav">jp_jump.wav</a>
-	<a href="../hsptv/sel.wav">sel.wav</a>
-	<a href="../hsptv/se_aaa.wav">se_aaa.wav</a>
-	<a href="../hsptv/se_block2.wav">se_block2.wav</a>
-	<a href="../hsptv/se_bom.wav">se_bom.wav</a>
-	<a href="../hsptv/se_break.wav">se_break.wav</a>
-	<a href="../hsptv/se_break2.wav">se_break2.wav</a>
-	<a href="../hsptv/se_break3.wav">se_break3.wav</a>
-	<a href="../hsptv/se_click.wav">se_click.wav</a>
-	<a href="../hsptv/se_foot.wav">se_foot.wav</a>
-	<a href="../hsptv/se_jump.wav">se_jump.wav</a>
-	<a href="../hsptv/se_jump2.wav">se_jump2.wav</a>
-	<a href="../hsptv/se_puyo.wav">se_puyo.wav</a>
-	<a href="../hsptv/se_shot.wav">se_shot.wav</a>
-	<a href="../hsptv/se_shot2.wav">se_shot2.wav</a>
-	<a href="../hsptv/se_tyuiin.wav">se_tyuiin.wav</a>
 	<a href="../hsptv/se01.wav">se01.wav</a>
 	<a href="../hsptv/se02.wav">se02.wav</a>
 	<a href="../hsptv/se03.wav">se03.wav</a>
@@ -213,6 +248,21 @@
 	<a href="../hsptv/se13.wav">se13.wav</a>
 	<a href="../hsptv/se14.wav">se14.wav</a>
 	<a href="../hsptv/se15.wav">se15.wav</a>
+	<a href="../hsptv/se_aaa.wav">se_aaa.wav</a>
+	<a href="../hsptv/se_block2.wav">se_block2.wav</a>
+	<a href="../hsptv/se_bom.wav">se_bom.wav</a>
+	<a href="../hsptv/se_break.wav">se_break.wav</a>
+	<a href="../hsptv/se_break2.wav">se_break2.wav</a>
+	<a href="../hsptv/se_break3.wav">se_break3.wav</a>
+	<a href="../hsptv/se_click.wav">se_click.wav</a>
+	<a href="../hsptv/se_foot.wav">se_foot.wav</a>
+	<a href="../hsptv/se_jump.wav">se_jump.wav</a>
+	<a href="../hsptv/se_jump2.wav">se_jump2.wav</a>
+	<a href="../hsptv/se_puyo.wav">se_puyo.wav</a>
+	<a href="../hsptv/se_shot.wav">se_shot.wav</a>
+	<a href="../hsptv/se_shot2.wav">se_shot2.wav</a>
+	<a href="../hsptv/se_tyuiin.wav">se_tyuiin.wav</a>
+	<a href="../hsptv/sel.wav">sel.wav</a>
 
 		</pre>
 
