ドキュメントの修正
Former-commit-id: 36fa9030f3d35215c06f08c6753cddaacddc40bb

--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -712,7 +712,7 @@
 		<tr><td>プラットフォーム</td><td>文字コード</td><td>フォントファイル</td></tr>
 		<tr><td>Windows</td><td>SJIS</td><td>不要</td></tr>
 		<tr><td>Linux/RaspberryPi</td><td>UTF-8</td><td>ipaexg.ttfファイルが必要</td></tr>
-		<tr><td>html5(Emscripten)</td><td>UTF-8</td><td>ipaexg.ttfファイルが必要</td></tr>
+		<tr><td>html5(Emscripten)</td><td>UTF-8</td><td>不要</td></tr>
 		<tr><td>android</td><td>UTF-8</td><td>不要</td></tr>
 		<tr><td>iOS</td><td>UTF-8</td><td>不要</td></tr>
 		</table>
