ドキュメントの間違いを修正
Former-commit-id: 6e7e270e4651c8196ed6b6bcdccd8f74a40c8913

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -254,7 +254,7 @@
 		もちろんイベントリストによる自律移動や3Dとの連携については、従来のプラグインを利用することもできます。<br>
 		標準スプライトは、HSP3Dish、HGIMG4がサポートする全プラットフォームで動作するほか、
 		HSP3標準ランタイムでもサポートすることを予定しています。<br>
-		標準スプライトの詳細は、<a href="sprite.htm">「標準スプライトプログラミングガイド」</a>を参照してください。
+		標準スプライトの詳細は、<a href="sprite.html">「標準スプライトプログラミングガイド」</a>を参照してください。
 		</p>
 
 
