--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -3242,7 +3242,7 @@ owari         → mes "OK"</pre>
 		</p>
 		<pre>; 例
 #uselib "test.dll"
-#func test "_func@16" var,int,int.int
+#func test "_func@16" var,int,int,int
     test a,1,2,3    ; test.dllのfunc(&amp;a,1,2,3)が呼び出される</pre>
 		<p>
 			DLLからの関数インポートは、最初に命令が実行された時点で行なわれます。
