HGIMG4ドキュメントの更新
Former-commit-id: 1a36ad2703586978803ccd1d685c0b656899ca23

--- a/package/win32/doclib/hgimg4.html
+++ b/package/win32/doclib/hgimg4.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2020(c)</p>
+	<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2021(c)</p>
 	<img src="image/hgimg4ttl.jpg" width="640" height="200" alt="タイトル">
 	<h1>HGIMG4プログラミングガイド</h1>
 
@@ -221,7 +221,8 @@
 
 	gpreset	option					シーンを描画
 	gppostefx  postid,opt1,opt2			ポストエフェクト生成
-	gpuselight objid				ライトオブジェクトの切り替え
+	gpresetlight p1,p2,p3				カレントライトの初期化
+	gpuselight objid				ライトオブジェクトの登録
 	gpusecamera objid				カメラオブジェクトの切り替え
 	gpusescene sceneid				シーンの切り替え
 
@@ -802,7 +803,7 @@
 	ライト(光源)は、3Dシーンに配置可能な照明の情報です。
 	ライトは、ノードオブジェクトの1つとして扱われ、固有のオブジェクトIDを持っています。
 <br><br>
-	シーンがリセットされると、デフォルトのライトが配置されます。
+	シーンがリセットされると、デフォルトのディレクショナルライトが配置されます。
 	デフォルトのライトには、GPOBJ_LIGHTマクロを使用してアクセスすることができます。
 	</p>
 	<pre>
@@ -812,15 +813,29 @@
 	</pre>
 	<p>
 	上の例では、デフォルトのライト色を(1,1,1)に設定します。
-	色の設定は、0～1の値でRGBごとに指定することができます。1は最大の輝度となるため、
-	RGBの段階で表現すると、(R=255,G=255,B=255)になります。
-	ライトの場合は、setdirによりアンビエント(環境)カラーを設定します。
+	ライト色は、setcolor命令でノードに設定された色がそのまま使用されます。<br>
+	色の設定は、0～1の実数値でRGBごとに指定することができます。1は最大の輝度となるため、
+	RGBの段階で表現すると、(R=255,G=255,B=255)になります。<br>
+	デフォルトのライトでは、setdirによりアンビエント(環境)カラーを設定することができます。
 	上の例では、(R=128,G=128,B=128)がアンビエント(環境)カラーになります。
-	ライトの回転角度を変更することで、照明を当てる方向が変わります。
-	スポットライト、ポイントライトが設定されている場合は、ライトの座標もパラメーター要素の
-	１つとなります。(現在のバージョンでは、スポットライト、ポイントライトはサポートしていません)
+	<br>
+	ディレクショナルライトでは、ライトの回転角度を変更することで、照明を当てる方向が変わります。
 <br><br>
-	デフォルトのライトだけでなく、シーン内にライトを複数設定して切り替えることも可能です。
+	デフォルトのライト以外にライトを設定することが可能です。
+	HGIMG4では、以下のライトを使用することができます。それぞれの種別ごとに最大10個のライトを3Dオブジェクトに対して反映させることが可能です。
+	</p>
+		<table border="1">
+		<tr><td>種別</td><td>機能</td><td>GPU負荷</td><td>参照されるパラメーター</td></tr>
+		<tr><td>ディレクショナルライト</td><td>方向のみを持った光源</td><td>低</td><td>回転(Ang)</td></tr>
+		<tr><td>ポイントライト</td><td>座標と影響範囲を持った光源</td><td>中</td><td>座標(Pos),範囲(Range)</td></tr>
+		<tr><td>スポットライト</td><td>座標と方向、影響範囲を持った光源</td><td>高</td><td>座標(Pos),回転(Ang),範囲(Range),内側(Inner),外側(Outer)</td></tr>
+		</table>
+	<p>
+<br><br>
+	新しいライトを設定するためには、ライトオブジェクトを作成する必要があります。
+	これは、3D空間に配置されるオブジェクトの1つになります。
+	ライトオブジェクトは、gpnull命令で生成したヌルノードに対してgplight命令を実行することで作成することができます。
+	ヌルノードだけでなく、3D空間に配置される3Dモデルをライトオブジェクトとして作成することも可能です。この場合、ライトとしての機能を持つ3Dノードとなります。
 	</p>
 	<pre>
 		例:
@@ -829,7 +844,82 @@
 		gpuselight id_alight			; デフォルトのライトに設定
 	</pre>
 	<p>
-	シーン内に配置されたライトは、gpuselight命令により切り替えることができます。
+	gplight命令は、ライトの種別を指定してパラメーターとともにライトオブジェクトを初期化します。
+	</p>
+	<pre>
+		gplight id,opt,range,inner,outer	ライトノードを設定
+
+		id(0)     : オブジェクトのID
+		opt(0)    : ライト生成オプション
+		range(1)  : 影響範囲パラメーター
+		inner(0.5): 内側の減衰パラメーター
+		outer(1)  : 外側の減衰パラメーター
+	</pre>
+	<p>
+	ライト生成オプションにより種別を決定することができます。
+	</p>
+	<pre>
+		  opt値               |  内容
+		--------------------------------------------------------------
+		  GPOBJ_LGTOPT_NORMAL    平行光源(ディレクショナルライト)
+		  GPOBJ_LGTOPT_POINT     点光源(ポイントライト)
+		  GPOBJ_LGTOPT_SPOT      スポットライト
+	</pre>
+	<p>
+	以上でライトの特性を持ったオブジェクトが作成されます。
+	gplight命令は、あくまでもオブジェクトにライトとしての機能を設定するだけです。
+	設定されたライトは、gpuselight命令によりカレントライトとして登録する必要があります。<br>
+	カレントライトは、3Dオブジェクトやマテリアルを生成する際に設定されるライトの情報になります。
+	デフォルトの光源だけを使用する限りは、カレントライトを意識することはありませんが、
+	複数の光源を新しく設定する場合は、適切にカレントライトを設定しておく必要があります。
+	</p>
+	<pre>
+		gpresetlight命令によりカレントライトを初期化する
+			↓
+		gpuselight命令により必要なライトを登録する
+			↓
+		3Dオブジェクトやマテリアルを生成する(カレントライトの情報が反映される)
+	</pre>
+	<p>
+	gpresetlight命令は、カレントライトを初期化するための命令で、
+	カレントライトを設定しておくことで、以降に生成されたモデルやマテリアルが受けるライトの詳細を決めることができます。<br>
+	シーンが初期化された状態では、ディレクショナルライト1個だけを設定できる状態になっています。複数のライトや、ポイントライト、スポットライトなどを使用する場合は、gpresetlight命令によってカレントライトの個数をあらかじめ決めておく必要があります。
+	</p>
+	<pre>
+		gpresetlight p1,p2,p3
+
+		p1=1～9(1) : ディレクショナルライトの個数
+		p2=0～9(0) : ポイントライトの個数
+		p3=0～9(0) : スポットライトの個数
+	</pre>
+	<p>
+	p1,p2,p3パラメーターで、それぞれのライト種別が使用するライトの最大個数を指定します。ディレクショナルライトは最低でも1つ使用する必要があります。
+	それ以外のポイントライト、スポットライトは必要に応じて指定してください。GPUの計算負荷につながるため、できるだけ不要なライトは指定しないようにしてください。<br>
+	カレントライトが初期化された後は、gpuselight命令により登録することができます。
+	</p>
+	<pre>
+		gpuselight id,index
+
+		id(0) : 登録するライトオブジェクトのID
+		index=0～9(0) : 登録するライトオブジェクトのインデックス
+	</pre>
+	<p>
+	idにライトオブジェクトのIDを指定すれば、それがカレントライトに登録されます。<br>
+	indexの値は、複数のライトをカレントライトに登録する場合に使用します。1個目のライトは0、2個目のライトは1…という形で1つの種類につき最大10個のライトを設定することが可能です。<br>
+	カレントライトに登録することで、以降に生成されるモデル・マテリアルはカレントライトの影響を受けることになります。
+	<br>
+	アンビエントカラーは、シーンの中に1つだけ存在し、ディレクショナルライトとしてインデックス0に登録されたライトのパラメーターが参照されます。
+	<br><br>
+既にオブジェクトに設定されているライトの設定を変更する場合は、setobjlight命令を使用してください。
+	</p>
+	<pre>
+		setobjlight id
+
+		id      : オブジェクトID
+	</pre>
+	<p>
+	これにより、idで指定したオブジェクトが既にライトの設定が行われている場合であっても、カレントライトの設定を上書きします。
+	ただし、3Dモデルが生成された時点のカレントライトの設定(ディレクショナルライト、ポイントライト、スポットライトの個数)は変更されませんので注意してください。(必ず、カレントライトに含まれるライトの個数が同一のものを設定するようにしてください。)
 	</p>
 
 
